# eri

./: .gitignore  Cargo.toml  README.md
old/: data.rs  data_structures.rs  eri.ucl  main.rs  vault.hcl  vault.ucl
src/: config.rs  data.rs  main.rs  namespace.rs  template.rs
test/: eri.conf
test/vault/: listener.hcl  storage.hcl  vault.hcl
