[package]
name = "eri"
version = "0.1.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
handlebars = "3.1.0"
serde = "1.0"
serde_json = "1.0"
uclicious = "0.1.5"
uclicious_derive = "0.1.5"
uclicious-libucl-sys = "^0.8.2-alpha.2"
umask = "1.0.0"
