[package]
name = "eri"
version = "0.0.0"
authors = ["cezarmathe <me@cezarmathe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "2.33"
colored = "1.9"
errno = "0.2"
fern = "0.6"
handlebars = "3.1"
human-panic = "1.0"
libc = "0.2"
log = "0.4"
serde_json = "1.0"
uclicious = "0.1"
uclicious_derive = "0.1"
uclicious-libucl-sys = "0.8"
umask = { git = "https://github.com/Canop/umask" }
users = "0.10"
